# VixenEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.html  params.json  vixen.env
Linux/: CMakeLists.txt  Makefile  valgrind_output.txt  vixen.config  vixen.env  vixen.sh  vtest  vtest.config
Linux/Shaders/: Basic.vs  Ray.vs  Tess.fs  Tess.tc  Tess.vs
Linux/include/: FPSController.h
Linux/src/: FPSController.cpp  main.cpp
VE_2015/: VE_2015.sln
VE_2015/VCore/: VCore.vcxproj  VCore.vcxproj.filters
VE_2015/VCore_Temp/: vc140.idb
VE_2015/VGame/: VGame.vcxproj  VGame.vcxproj.filters
VE_2015/VGame_Temp/: vc140.idb
VE_2015/VGraphics/: VGraphics.vcxproj  VGraphics.vcxproj.filters
VE_2015/VGraphics_Temp/: vc140.idb
VE_2015/VTest/: VTest.vcxproj  VTest.vcxproj.filters  fonts.xml  main.cpp  manifest.xml  vtest.config
VE_2015/VTest_Temp/: vc140.idb
VS2015/: .gitignore  VixenEngine.sln
VS2015/VCore/: VCore.vcxproj  VCore.vcxproj.filters
VS2015/VGame/: VGame.vcxproj  VGame.vcxproj.filters
VS2015/VGraphics/: VGraphics.vcxproj  VGraphics.vcxproj.filters
VS2015/VTest/: VTest.vcxproj  VTest.vcxproj.filters  vixen.env  vtest.config
VTest/: test1.txt  test2.txt  test3.txt  vixen.env  vtest  vtest.config
Windows/: CMakeLists.txt  config.bat  vixen.env
Windows/vcore/: CMakeLists.txt
Windows/vgame/: CMakeLists.txt
Windows/vgraphics/: CMakeLists.txt
Windows/vtest/: .gitignore  CMakeLists.txt
assets/Fonts/: Consolas_12.fnt  Consolas_14.fnt  Consolas_16.fnt  Consolas_24.fnt  HanWan_24.fnt  hanwan.fnt  mineshaft.fnt  mineshaft_72.fnt  test.fnt
assets/Materials/: Ceiling.vmt  Light.vmt  PointLight.vmt  Raptor.vmt  SpotLight.vmt  brokenRail.vmt  buffer.vmt  floor.vmt  lamp.vmt  minecart.vmt  rail.vmt  rainbow.vmt  sign.vmt  wall.vmt  wheel.vmt  white.vmt
assets/Models/: BrokenRail.mdl  Raptor.mtl  SpeedBoost.mdl  Wheel.mdl  ZombiDog.mtl  brace.mdl  cube.mdl  dodgeball.mtl  floor.mdl  floor.mtl  gem_red.mdl  lamp.mdl  minecart.mdl  models.config  notFloor.mdl  player.mtl  rail.mdl  raptor.mdl  wall.mdl  zombie.mtl  zombie_fixed.mtl
assets/Prefabs/: BrokenRail.pfb  Buffer.pfb  GemRail.pfb  PointLight.pfb  SpeedBoostRail.pfb  ceiling.pfb  cube.pfb  floor.pfb  gem_red.pfb  mineSection.pfb  mineSectionBothLamp.pfb  mineSectionLeftLamp.pfb  mineSectionRightLamp.pfb  prefabs.master  rail.pfb  section.pfb  tippedCartRail.pfb  wall.pfb  wallLeft.pfb  wallRight.pfb
assets/Scenes/: GameOver.scene  lights.scene  pause.scene  scene1.scene  scenes.config
assets/Scripts/: GameOver.lua  Hazard.lua  LoadingAnimation.lua  MineSection.lua  MineShaft.lua  Rail.lua  SpeedBoost.lua  camera.lua  floor.lua  floorspawn.lua  fps.lua  game.lua  gem.lua  gemspawner.lua  move.lua  pause.lua  player.lua  railspawn.lua  raptor.lua  rotate.lua  setup.lua  test.lua  wall.lua  wallspawn.lua
assets/Shaders/: BasicPS.hlsl  Model.fs  PixelShader.hlsl  SpriteBatch_VS.hlsl  test_pshader.hlsl  test_vshader.hlsl  texture_VS.hlsl
assets/Textures/: floor2.pdn
dependencies/TinyXML/: tinyxml2.h  tinyxml2.lib
dependencies/libarchive/: archive.lib
dependencies/libogg/: libogg.lib
dependencies/libvorbis/: libvorbis.lib
dependencies/libvorbisfile/: libvorbisfile.lib
dependencies/lua/: lua52.lib
dependencies/portaudio/: portaudio_x86.lib
dependencies/zlib1/: MINIZIP.lib
doxygen/: Doxyfile  VCore  VGame  vaudio.cfg  vcore.cfg  vgame.cfg  vgraphics.cfg  vscripting.cfg
doxygen/html/: index.html
doxygen/latex/: refman.tex
doxygen/vcore/: doxygen_sqlite3.db
include/: spotlightcomponent.h  vix_aabb.h  vix_algorithms.h  vix_asset.h  vix_assimp.h  vix_bmfont.h  vix_bullet_boxcollider.h  vix_bullet_collidershape.h  vix_bullet_planecollider.h  vix_bullet_spherecollider.h  vix_bulletsimulator.h  vix_camera.h  vix_camera2Dcomponent.h  vix_camera2d.h  vix_camera3Dcomponent.h  vix_camera3d.h  vix_component.h  vix_components.h  vix_containers.h  vix_curl.h  vix_curl_singleton.h  vix_debugutil.h  vix_directx.h  vix_dxcamera2d.h  vix_dxcamera3d.h  vix_dxdefferedbuffers.h  vix_dxindexbuffer.h  vix_dxinstancebuffer.h  vix_dxlightbuffer.h  vix_dxmaterial.h  vix_dxmathfunctions.h  vix_dxmodel.h  vix_dxpixelshader.h  vix_dxprimitivecube.h  vix_dxquad.h  vix_dxrenderer.h  vix_dxresourceloader.h  vix_dxshader.h  vix_dxspritebatcher.h  vix_dxtexture.h  (+76 more)
include/unused/: vix_archivepak.h  vix_contentmanager.h  vix_fontloader.h  vix_list.h  vix_luaclasses.h  vix_luaregisters.h  vix_modelmanager.h  vix_zlib.h
include/vaudio/: vix_paudiomanager.h  vix_portaudio.h  vix_sndfile.h
include/vconfig/: vix_config.h  vix_configapp.h  vix_fltk.h
include/vcore/: vix_algorithms.h  vix_asset.h  vix_containers.h  vix_content.h  vix_debugutil.h  vix_errglobals.h  vix_file.h  vix_file_interface.h  vix_filemanager.h  vix_filesystem.h  vix_fileutil.h  vix_inireader.h  vix_iniwriter.h  vix_libarchive.h  vix_manager.h  vix_noncopy.h  vix_osutil.h  vix_pathmanager.h  vix_paths.h  vix_resourcemanager.h  vix_singleton.h  vix_stlutil.h  vix_stringutil.h  vix_tinyxml.h  vix_typedefs.h
include/vgame/: vix_aabb.h  vix_bullet.h  vix_bullet_boxcollider.h  vix_bullet_collidershape.h  vix_bullet_planecollider.h  vix_bullet_spherecollider.h  vix_bulletsimulator.h  (+41 more)
source/: main.cpp  vix_aabb.cpp  vix_asset.cpp  vix_bmfont.cpp  vix_bullet_collidershape.cpp  vix_bullet_planecollider.cpp  vix_camera2Dcomponent.cpp  vix_camera3Dcomponent.cpp  vix_dxdefferedbuffers.cpp  vix_dxindexbuffer.cpp  vix_dxinstancebuffer.cpp  vix_dxmaterial.cpp  vix_dxmathfunctions.cpp  vix_dxmodel.cpp  vix_dxpixelshader.cpp  vix_dxrenderer.cpp  vix_dxresourceloader.cpp  vix_dxshader.cpp  vix_dxspritebatcher.cpp  vix_filemanager.cpp  vix_fileutil.cpp  vix_fps_script.cpp  vix_freeimage.cpp  vix_game.cpp  vix_gameconfig.cpp  vix_gameobject.cpp  vix_lightmanager.cpp  vix_luaengine.cpp  vix_luascript.cpp  vix_luascriptmanager.cpp  vix_material.cpp  vix_mathfunctions.cpp  vix_mineshaft_script.cpp  vix_modelcomponent.cpp  vix_pause_script.cpp  vix_player_script.cpp  vix_prefab.cpp  vix_prefabmanager.cpp  vix_rectangle.cpp  vix_renderer_singleton.cpp  (+9 more)
(+1131 files in other folders)
